<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/editNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msnombres"
            />
        <EditText
            android:id="@+id/editApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msapellido"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ingrese Edad: "/>
            <EditText
                android:id="@+id/editEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/msedad"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msdni"
                />
            <CheckBox
                android:id="@+id/chkDocAutorizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Documento de autorizacion"
                />
            <CheckBox
                android:id="@+id/chkDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DNI"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Posse boleto de entrada"/>
                <RadioGroup
                    android:id="@+id/rbtnBoleto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbtsi"
                    android:text="@string/msmsi"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbtno"
                    android:text="@string/msmno"
                    />
                </RadioGroup>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <Button
                        android:id="@+id/btnValidarIngreso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn1"
                        android:onClick="validarIngreso"
                        />
                    <Button
                        android:id="@+id/btnResetear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn2"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
